# champ

./: .gitignore  .gitmodules  .pylintrc  README.md  README.zh_CN.md  README.zh_TW.md  demo.py  environment.yml  eval.py  fetch_data.sh  fetch_training_data.sh  index.html  inference.py  inference_dwpose.py  inference_smpl.py  install.ps1  install_cn.ps1  package.json  pnpm-lock.yaml  pyproject.toml  requirements-windows.txt  requirements.txt  run_inference.ps1  setup.py  tailwind.config.js  track.py  train_s1.py  train_s2.py  tsconfig.app.json
.github/workflows/: pages.yml  static_check.yml
4D-Humans/: .gitignore  LICENSE.md  gradio_app.py  smpl_rendering.blend  train.py  transfer_smpl.py
ZZZ/: README.md  rendering.py
assets/: abap-CfQTfsdm.js  apex-BUxLlBSM.js  azcli-CU_dwqs8.js  bat-DWFODfDz.js  bicep-CIJ_UyQp.js  cameligo-BW7R3LBI.js  clojure-D9tzKAGE.js  coffee-C1Mz_abc.js  csharp-c2hA8jvi.js  csp-Ch7yxlMo.js  css.worker-Bi8AGeo-.js  cssMode-9CL8Wkp2.js  cssMode-B1eNEHwl.js  cssMode-BSFtR-EJ.js  cssMode-BUqITZGo.js  cssMode-Btvc0X3C.js  cssMode-CV445nGa.js  cssMode-Cda-ZELo.js  cssMode-DP9smlzN.js  cssMode-u7Zx72Rp.js  dart-BHw03n-1.js  ecl-ByV54v1F.js  editor.worker-DCtdnj9v.js  elixir-ByY8twkA.js  flow9-DdnQrJJW.js  freemarker2-BTc4X8au.js  freemarker2-B_XHCTh3.js  freemarker2-Bxr2t1uO.js  freemarker2-C7m1X_Bk.js  freemarker2-CXU1pTCC.js  freemarker2-CgRXBw1u.js  freemarker2-Cz7inxIS.js  freemarker2-D-Vic592.js  freemarker2-VGnvSs5l.js  fsharp-CrWVR4ZC.js  handlebars-6V-SqJ0Y.js  handlebars-BCQA6yg9.js  handlebars-CCRRvDtu.js  handlebars-CtWL_S74.js  handlebars-D19GG3v9.js  (+167 more)
assets/blend/: smpl_mesh_info.npy
configs/: inference.yaml
configs/inference/: inference.yaml
configs/train/: stage1.yaml  stage2.yaml
datasets/: data_utils.py  image_dataset.py  video_dataset.py
docs/: ROADMAP.md  ROADMAP.zh_CN.md  ROADMAP.zh_TW.md  data_process.md
docs/data_processors/: README.md
dwpose/: util.py  wholebody.py
hmr2/configs/: __init__.py  datasets_eval.yaml  datasets_tar.yaml
hmr2/configs_hydra/: train.yaml
hmr2/datasets/: __init__.py  image_dataset.py  utils.py  vitdet_dataset.py
hmr2/models/: __init__.py  hmr2.py  losses.py
hmr2/utils/: download.py  mesh_renderer.py  pck_accuracy.py  pose_utils.py  pylogger.py  renderer.py  texture_utils.py  utils_detectron2.py
images/: Dockerfile_smpl  Singularity_smpl.def
models/: attention.py  champ_model.py  guidance_encoder.py  model_util.py  motion_module.py  mutual_self_attention.py  resnet.py  transformer_3d.py  unet_2d_blocks.py  unet_2d_condition.py  unet_3d.py  unet_3d_blocks.py
pipelines/: pipeline_aggregation.py  pipeline_guidance2image.py  pipeline_guidance2video.py
scripts/data_processors/: inference_smpl.py  render_smpl.py  transfer_smpl.py
scripts/pretrained_models/: __init__.py  download.py
src/: config.json  main.ts
src/assets/: base.css  carousel.css  main.css
src/components/: AnimateHumanVideos.vue  ComparisionVideos.vue  CrossIdVideos.vue  T2IVideos.vue  UnseenVideos.vue
src/directives/: video-lazy.ts
src/router/: index.ts
src/views/: HomeView.vue
utils/: download.py  fs.py  tb_tracker.py  util.py  video_utils.py
(+58 files in other folders)
